# MagmaBenchmark

./: .clang-format  .clangd  CMakeLists.txt  LICENSE  README.md
getrf/: CMakeLists.txt
getrf/src/: getrf.cpp
